modify inverse domain name